Updated package.json and updated path of pjax in hmtl files

--- a/pjax-tutorial/common.html
+++ b/pjax-tutorial/common.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<title>Pjax Tutorial</title>
-		<script src='node_modules/pjax/pjax.js' type="text/javascript"></script>
+		<script src='../node_modules/pjax/pjax.js' type="text/javascript"></script>
 	</head>
 	<body>  
 		<h1>Welcome to Pjax tutorial</h1>
